# rust_gba_template

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  gba.json  linker.ld
.cargo/: config
crt0/: Cargo.toml  build.rs
crt0/src/: base.rs  lib.rs
src/: lib.rs  main.rs
