[package]
name = "crt0"
version = "0.1.0"
authors = ["Joseph0304 <joseph0304.drdr@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }

bincode = "1.0"

[dependencies]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
